--- a/_modules/deepecho/benchmark/kubernetes.html
+++ b/_modules/deepecho/benchmark/kubernetes.html
@@ -314,15 +314,15 @@
     <span class="k">return</span> <span class="n">spec</span>
 
 
-<span class="k">def</span> <span class="nf">_df_to_csv_str</span><span class="p">(</span><span class="n">df</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">_dataframe_to_csv_str</span><span class="p">(</span><span class="n">dataframe</span><span class="p">):</span>
     <span class="k">with</span> <span class="n">StringIO</span><span class="p">()</span> <span class="k">as</span> <span class="n">sio</span><span class="p">:</span>
-        <span class="n">df</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="n">sio</span><span class="p">)</span>
+        <span class="n">dataframe</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="n">sio</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">sio</span><span class="o">.</span><span class="n">getvalue</span><span class="p">()</span>
 
 
 <span class="k">def</span> <span class="nf">_upload_to_s3</span><span class="p">(</span><span class="n">bucket</span><span class="p">,</span> <span class="n">path</span><span class="p">,</span> <span class="n">results</span><span class="p">,</span> <span class="n">aws_key</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">aws_secret</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
     <span class="n">client</span> <span class="o">=</span> <span class="n">boto3</span><span class="o">.</span><span class="n">client</span><span class="p">(</span><span class="s1">&#39;s3&#39;</span><span class="p">,</span> <span class="n">aws_access_key_id</span><span class="o">=</span><span class="n">aws_key</span><span class="p">,</span> <span class="n">aws_secret_access_key</span><span class="o">=</span><span class="n">aws_secret</span><span class="p">)</span>
-    <span class="n">client</span><span class="o">.</span><span class="n">put_object</span><span class="p">(</span><span class="n">Bucket</span><span class="o">=</span><span class="n">bucket</span><span class="p">,</span> <span class="n">Key</span><span class="o">=</span><span class="n">path</span><span class="p">,</span> <span class="n">Body</span><span class="o">=</span><span class="n">_df_to_csv_str</span><span class="p">(</span><span class="n">results</span><span class="p">))</span>
+    <span class="n">client</span><span class="o">.</span><span class="n">put_object</span><span class="p">(</span><span class="n">Bucket</span><span class="o">=</span><span class="n">bucket</span><span class="p">,</span> <span class="n">Key</span><span class="o">=</span><span class="n">path</span><span class="p">,</span> <span class="n">Body</span><span class="o">=</span><span class="n">_dataframe_to_csv_str</span><span class="p">(</span><span class="n">results</span><span class="p">))</span>
 
 
 <div class="viewcode-block" id="run_dask_function"><a class="viewcode-back" href="../../../api/deepecho.benchmark.kubernetes.html#deepecho.benchmark.kubernetes.run_dask_function">[docs]</a><span class="k">def</span> <span class="nf">run_dask_function</span><span class="p">(</span><span class="n">config</span><span class="p">):</span>
@@ -350,7 +350,8 @@
 
     <span class="n">cluster_spec</span> <span class="o">=</span> <span class="n">_generate_cluster_spec</span><span class="p">(</span><span class="n">config</span><span class="p">,</span> <span class="n">kubernetes</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
 
-    <span class="kn">from</span> <span class="nn">dask_kubernetes</span> <span class="kn">import</span> <span class="n">KubeCluster</span>   <span class="c1"># Importing here to avoid an aiohttp error</span>
+    <span class="c1"># Importing here to avoid an aiohttp error if not used.</span>
+    <span class="kn">from</span> <span class="nn">dask_kubernetes</span> <span class="kn">import</span> <span class="n">KubeCluster</span>   <span class="c1"># pylint: disable=C0415</span>
 
     <span class="n">cluster</span> <span class="o">=</span> <span class="n">KubeCluster</span><span class="o">.</span><span class="n">from_dict</span><span class="p">(</span><span class="n">cluster_spec</span><span class="p">)</span>
 
@@ -387,12 +388,13 @@
                 <span class="n">os</span><span class="o">.</span><span class="n">makedirs</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">dirname</span><span class="p">(</span><span class="n">path</span><span class="p">),</span> <span class="n">exist_ok</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
                 <span class="n">results</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="n">path</span><span class="p">)</span>
 
-        <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
+        <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>   <span class="c1"># pylint: disable=W0703</span>
             <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Error storing results. Falling back to console dump.&#39;</span><span class="p">)</span>
-            <span class="nb">print</span><span class="p">(</span><span class="n">_df_to_csv_str</span><span class="p">(</span><span class="n">results</span><span class="p">))</span>
+            <span class="nb">print</span><span class="p">(</span><span class="n">_dataframe_to_csv_str</span><span class="p">(</span><span class="n">results</span><span class="p">))</span>
 
-    <span class="k">else</span><span class="p">:</span>
-        <span class="k">return</span> <span class="n">results</span></div>
+        <span class="k">return</span> <span class="kc">None</span>
+
+    <span class="k">return</span> <span class="n">results</span></div>
 
 
 <div class="viewcode-block" id="run_on_kubernetes"><a class="viewcode-back" href="../../../api/deepecho.benchmark.kubernetes.html#deepecho.benchmark.kubernetes.run_on_kubernetes">[docs]</a><span class="k">def</span> <span class="nf">run_on_kubernetes</span><span class="p">(</span><span class="n">config</span><span class="p">,</span> <span class="n">namespace</span><span class="o">=</span><span class="s1">&#39;default&#39;</span><span class="p">):</span>
@@ -409,8 +411,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># read local config</span>
     <span class="n">load_kube_config</span><span class="p">()</span>
-    <span class="n">c</span> <span class="o">=</span> <span class="n">Configuration</span><span class="p">()</span>
-    <span class="n">Configuration</span><span class="o">.</span><span class="n">set_default</span><span class="p">(</span><span class="n">c</span><span class="p">)</span>
+    <span class="n">Configuration</span><span class="o">.</span><span class="n">set_default</span><span class="p">(</span><span class="n">Configuration</span><span class="p">())</span>
 
     <span class="c1"># create client and create pod on default namespace</span>
     <span class="n">core_v1</span> <span class="o">=</span> <span class="n">core_v1_api</span><span class="o">.</span><span class="n">CoreV1Api</span><span class="p">()</span>
