--- a/genindex.html
+++ b/genindex.html
@@ -223,11 +223,25 @@
 </li>
       </ul></li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.base.html#deepecho.base.DeepEcho.context_columns">context_columns (deepecho.base.DeepEcho attribute)</a>
+
+      <ul>
+        <li><a href="api/deepecho.html#deepecho.DeepEcho.context_columns">(deepecho.DeepEcho attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
 </tr></table>
 
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.base.html#deepecho.base.DeepEcho.data_columns">data_columns (deepecho.base.DeepEcho attribute)</a>
+
+      <ul>
+        <li><a href="api/deepecho.html#deepecho.DeepEcho.data_columns">(deepecho.DeepEcho attribute)</a>
+</li>
+      </ul></li>
       <li><a href="api/deepecho.benchmark.html#deepecho.benchmark.Dataset">Dataset (class in deepecho.benchmark)</a>
 
       <ul>
@@ -246,10 +260,10 @@
 </li>
       <li><a href="api/deepecho.benchmark.html#module-deepecho.benchmark">deepecho.benchmark (module)</a>
 </li>
-      <li><a href="api/deepecho.benchmark.dataset.html#module-deepecho.benchmark.dataset">deepecho.benchmark.dataset (module)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.benchmark.dataset.html#module-deepecho.benchmark.dataset">deepecho.benchmark.dataset (module)</a>
+</li>
       <li><a href="api/deepecho.benchmark.evaluation.html#module-deepecho.benchmark.evaluation">deepecho.benchmark.evaluation (module)</a>
 </li>
       <li><a href="api/deepecho.benchmark.kubernetes.html#module-deepecho.benchmark.kubernetes">deepecho.benchmark.kubernetes (module)</a>
@@ -275,6 +289,14 @@
 
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.base.html#deepecho.base.DeepEcho.entity_columns">entity_columns (deepecho.base.DeepEcho attribute)</a>
+
+      <ul>
+        <li><a href="api/deepecho.html#deepecho.DeepEcho.entity_columns">(deepecho.DeepEcho attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/deepecho.benchmark.evaluation.html#deepecho.benchmark.evaluation.evaluate_model_on_datasets">evaluate_model_on_datasets() (in module deepecho.benchmark.evaluation)</a>
 </li>
