--- a/genindex.html
+++ b/genindex.html
@@ -210,6 +210,7 @@
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
  | <a href="#V"><strong>V</strong></a>
  
 </div>
@@ -414,6 +415,14 @@
         <li><a href="api/deepecho.benchmark.metrics.sdmetrics.html#deepecho.benchmark.metrics.sdmetrics.sdmetrics_score">(in module deepecho.benchmark.metrics.sdmetrics)</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/deepecho.par.html#deepecho.par.PARNet.training">training (deepecho.par.PARNet attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
