--- a/_modules/deepecho/benchmark/evaluation.html
+++ b/_modules/deepecho/benchmark/evaluation.html
@@ -212,12 +212,7 @@
     <span class="k">return</span> <span class="n">now</span>
 
 
-<span class="k">def</span> <span class="nf">_fit_model</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="n">model</span><span class="p">,</span> <span class="n">max_entities</span><span class="p">):</span>
-    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
-        <span class="n">dataset</span> <span class="o">=</span> <span class="n">Dataset</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="n">max_entities</span><span class="o">=</span><span class="n">max_entities</span><span class="p">)</span>
-    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="nb">list</span><span class="p">):</span>
-        <span class="n">dataset</span> <span class="o">=</span> <span class="n">Dataset</span><span class="p">(</span><span class="o">*</span><span class="n">dataset</span><span class="p">)</span>
-
+<span class="k">def</span> <span class="nf">_fit_model</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="n">model</span><span class="p">):</span>
     <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="nb">tuple</span><span class="p">):</span>
         <span class="n">model_instance</span> <span class="o">=</span> <span class="n">model</span><span class="p">[</span><span class="mi">0</span><span class="p">](</span><span class="o">**</span><span class="n">model</span><span class="p">[</span><span class="mi">1</span><span class="p">])</span>
     <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="nb">type</span><span class="p">):</span>
@@ -260,7 +255,12 @@
     <span class="n">now</span> <span class="o">=</span> <span class="n">_log_time</span><span class="p">()</span>
 
     <span class="k">try</span><span class="p">:</span>
-        <span class="n">model_instance</span> <span class="o">=</span> <span class="n">_fit_model</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="n">model</span><span class="p">,</span> <span class="n">max_entities</span><span class="p">)</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
+            <span class="n">dataset</span> <span class="o">=</span> <span class="n">Dataset</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="n">max_entities</span><span class="o">=</span><span class="n">max_entities</span><span class="p">)</span>
+        <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="nb">list</span><span class="p">):</span>
+            <span class="n">dataset</span> <span class="o">=</span> <span class="n">Dataset</span><span class="p">(</span><span class="o">*</span><span class="n">dataset</span><span class="p">)</span>
+
+        <span class="n">model_instance</span> <span class="o">=</span> <span class="n">_fit_model</span><span class="p">(</span><span class="n">dataset</span><span class="p">,</span> <span class="n">model</span><span class="p">)</span>
         <span class="n">now</span> <span class="o">=</span> <span class="n">_log_time</span><span class="p">(</span><span class="n">result</span><span class="p">,</span> <span class="s1">&#39;fit&#39;</span><span class="p">,</span> <span class="n">now</span><span class="p">)</span>
 
         <span class="n">sampled</span> <span class="o">=</span> <span class="n">_sample</span><span class="p">(</span><span class="n">model_instance</span><span class="p">,</span> <span class="n">dataset</span><span class="p">)</span>
